# votecatcher

./: .cz.toml  .editorconfig  .env.local.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  OPERATIONS.md  README.md  SECURITY.md  cliff.toml  docker-compose.supabase.yml  docker-compose.yml  example.env.local  justfile  package-lock.json  package.json  railway.toml  render.yaml  setupSupabase.sh  start.bat  start.ps1  start.sh
.agent-workspace/: DEVELOPER.md  (+11 more)
backend/: .coverage  .dockerignore  .env.example  AGENTS.md  Dockerfile  Dockerfile.prod  alembic.ini  main.py  openapi.yaml  pyproject.toml  pyrightconfig.json  typecheck-baseline.json  vulture_whitelist.py
backend/alembic/: env.py
backend/alembic/versions/: 20260312200000_add_provider_fields_to_jobs.py  20260312210000_add_ocr_cache_tracking_fields.py  20260317140000_add_ocr_index_remove_unique.py  20260318230000_add_voter_list_tracking.py  20260327010000_add_stage_timing_fields.py  25e9ccd8acbe_add_region_field_specs_table.py  7a5f1e454eac_add_distinct_ocr_count_to_matcher_jobs.py  c18ff4a97d6e_add_phase_1_data_models.py
backend/app/: api.py  dependencies.py  fuzzy_match_helper.py  schemas.py  startup.py
backend/app/api_models/: __init__.py  database.py
backend/app/campaign/: campaign_repository.py
backend/app/common/auth/: session.py
backend/app/common/data/: supabase.py  supabase_client.py
backend/app/data/: __init__.py  database_client.py  demo_data.py  memory_db.py  models.py
backend/app/data/database/: session.py
backend/app/data/table/: campaign_table.py  demo_campaign_tables.py  match_table.py
backend/app/demo/: __init__.py  demo_service.py
backend/app/domain/: __init__.py  campaign.py  field_spec.py  petition.py  state_machine.py  voter.py
backend/app/events/: __init__.py  event_bus.py  event_types.py  matching_task_events.py  sse_manager.py
backend/app/events/transports/: __init__.py  base.py  sse.py
backend/app/files/: __init__.py  file_repository.py  file_service.py
backend/app/jobs/: __init__.py  job_orchestrator.py  worker.py
backend/app/logger_config/: app_logger.py
backend/app/logging/: app_logger.py
backend/app/matcher/: __init__.py  voter_matcher.py
backend/app/matching/: __init__.py  engines.py  fuzzy_match_helper.py  match_columns.py  match_repository.py  matching_service.py  matching_types.py  response_adapter.py  voter_data_adapter.py
backend/app/middleware/: __init__.py  correlation.py  cors.py  rate_limit.py  security_headers.py
backend/app/observability/: event_validation.py  events.py  health.py  query_logging.py  sentry.py
backend/app/ocr/: __init__.py  data_model.py  ocr_client_factory.py  ocr_config.py  ocr_helper.py  ocr_manager.py  ocr_result_repo.py  ocr_service.py  response_types.py
backend/app/ocr/batching/: batch_handler.py  batch_ocr_client.py  gemini_ocr_batch.py  memory_batching.py  memory_job_monitor.py  mistral_ocr_batch.py  ocr_batch_repository.py  openai_ocr_batch.py  request_types.py
backend/app/ocr/clients/: batch_ocr_manager.py  gemini.py  mistral.py  open_ai.py
backend/app/ocr/data/: data_models.py  ocr_memory_storage.py  ocr_repository.py
backend/app/persistence/: __init__.py  contracts.py  session.py
backend/app/persistence/engines/: __init__.py  base.py  model_imports.py  sqlite.py  supabase.py
backend/app/regions/: README.md  dc.json5  demo.json5
backend/app/repositories/: __init__.py  campaign_repo.py  field_spec_repo.py  petition_repo.py  voter_repo.py
backend/app/routers/: __init__.py  auth.py  campaign_router.py  config_route.py  config_router.py  crop_router.py  database_router.py  demo_router.py  events_router.py  file.py  file_route.py  job_router.py  ocr_route.py  provider_router.py  region_router.py  results_router.py  scan_router.py  session_router.py  upload_router.py  workspace.py
backend/app/scripts/: supabase_cli.py
backend/app/services/: campaign_management_service.py  campaign_query_service.py  config_service.py  demo_orchestration_service.py  entry_coordinates.py  field_spec_service.py  job_query_service.py  metrics.py  ocr_text_parser.py  prediction_builder.py  prediction_truncation.py  providers.py  region_query_service.py  results_query_service.py  results_shared.py  session_service.py  supabase_service.py  upload_service.py  voter_list_service.py
backend/app/settings/: __init__.py  contracts.py  env_loader.py  env_parser.py  env_settings.py  settings.py  settings_repo.py
backend/app/settings/providers/: __init__.py  database_config.py  feature_config.py  ocr_config.py  supabase_config.py
backend/app/settings/sources/: __init__.py  env_file.py  environment.py
backend/app/storage/: __init__.py  crop_storage.py
backend/app/utils/: __init__.py  app_logger.py  masking.py  uuid_utils.py
backend/app/voter/: voter_processor.py  voter_schema.py
backend/app/voters/: __init__.py  voter_regions.py
backend/scripts/: generate_engine_graphs.py  generate_schema_docs.py  purge_old_campaigns.py
backend/tests/: conftest.py  test_config.py
backend/tests/benchmarks/: test_matching_performance.py  test_pagination_performance.py
backend/tests/integration/: conftest.py  test_engine_selection.py
backend/tests/integration/api/: conftest.py  test_campaign_metrics.py  test_campaign_results.py  test_campaign_scans.py  test_database.py  test_demo.py  test_error_handling.py  test_events.py  test_job_data_integrity.py  test_jobs.py  test_middleware.py  test_observability.py  test_providers.py  test_regions.py  test_sessions.py  test_setup_status.py  test_upload_events.py  test_upload_form_contract.py
backend/tests/matching/: test_response_adapter.py
backend/tests/routers/: test_ocr_simulate.py
backend/tests/security/: conftest.py  test_file_validation.py  test_input_fuzzing.py  test_jwt_security.py  test_pii_scoping.py  test_rate_limiting.py  test_sql_injection.py
backend/tests/unit/: test_database_models.py  test_dead_code_cleanup.py  test_detect_secrets_compliance.py
(+842 files in other folders)
