[project]
name = "ballot-petition-signature-verifier"
version = "0.0.15"
description = "A python package for verifying ballot petition signatures"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Mobolaji Williams" }]
maintainers = [
    { name = "Mobolaji Williams" },
    { name = "Andrew Shao" },
    { name = "Kurian Vithayathil" },
    { name = "Kevin Shu" },
    { name = "Eugene Kim" },
]
license = "MIT"
dependencies = [
    "argparse>=1.4.0",
    "asgi-correlation-id>=4.3.4",
    "claude-agent-sdk>=0.1.6",
    "dotenv>=0.9.9",
    "faker>=37.12.0",
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.48.0",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.5",
    "langchain-core>=0.3.51",
    "langchain-google-genai>=2.1.2",
    "langchain-mistralai>=0.2.10",
    "langchain-openai>=0.3.12",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "mistralai>=1.9.11",
    "numpy>=2.2.4",
    "openai>=2.7.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pymupdf>=1.25.5",
    "python-multipart>=0.0.20",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.3",
    "rich>=14.2.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
    "streamlit-shadcn-ui>=0.1.18",
    "structlog>=25.2.0",
    "supabase>=2.23.2",
    "supabase-auth>=2.23.2",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "black>=25.1.0",
    "flake8>=7.2.0",
    "pandas-stubs>=2.3.2.250926",
    "pymupdf-stubs>=1.26.1.post1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.4",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "app"
addopts = ["--import-mode=importlib"]


[tool.ruff]
exclude = ["notebooks", "cross_referencing_tests"]

[tool.basedpyright]
include = ["app"]
exclude = ["**/node_modules", "**/__pycache__"]
venvPath = "./.venv"
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = false
