[project]
name = "votecatcher-server"
version = "0.0.15"
description = "A python package for verifying ballot petition signatures"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Mobolaji Williams" }]
maintainers = [
	{ name = "Mobolaji Williams" },
	{ name = "Andrew Shao" },
	{ name = "Kurian Vithayathil" },
	{ name = "Kevin Shu" },
	{ name = "Eugene Kim" },
]
license = "MIT"
dependencies = [
	"aiofiles>=25.1.0",
	"aiosqlite>=0.21.0",
	"argparse>=1.4.0",
	"asgi-correlation-id>=4.3.4",
	"claude-agent-sdk>=0.1.6",
	"dotenv>=0.9.9",
	"duckdb>=1.4.3",
	"email-validator>=2.3.0",
	"faker>=37.12.0",
	"fastapi-injectable>=1.4.4",
	"fastapi[standard]>=0.115.12",
	"google-genai>=1.48.0",
	"granian>=2.6.0",
	"httpx>=0.28.1",
	"ipywidgets>=8.1.5",
	"langchain-core>=0.3.51",
	"langchain-google-genai>=2.1.2",
	"langchain-mistralai>=0.2.10",
	"langchain-openai>=0.3.12",
	"loguru>=0.7.3",
	"matplotlib>=3.10.1",
	"mistralai>=1.9.11",
	"numpy>=2.2.4",
	"openai>=2.7.1",
	"pandas>=2.2.3",
	"pillow>=11.1.0",
	"psycopg[binary,pool]>=3.2.13",
	"pwdlib[argon2]>=0.3.0",
	"pydantic>=2.11.2",
	"pydantic-settings>=2.12.0",
	"pyjwt>=2.10.1",
	"pymupdf>=1.25.5",
	"python-multipart>=0.0.20",
	"rapidfuzz>=3.13.0",
	"requests>=2.32.3",
	"rich>=14.2.0",
	"scikit-learn>=1.6.1",
	"slowapi>=0.1.9",
	"sqlalchemy>=2.0.44",
	"sqlmodel>=0.0.27",
	"alembic>=1.14.0",
	"streamlit>=1.44.1",
	"streamlit-shadcn-ui>=0.1.18",
	"structlog>=25.2.0",
	"supabase>=2.23.2",
	"supabase-auth>=2.23.2",
	"tomli>=2.2.1",
	"tomli-w>=1.2.0",
	"unsync>=1.4.0",
	"uvicorn>=0.38.0",
	"uvloop>=0.22.1",
	"pdf2image>=1.17.0",
]

[dependency-groups]
dev = [
	"basedpyright>=1.32.1",
	"devtools>=0.12.2",
	"diagrams>=0.25.1",
	"flake8>=7.2.0",
	"pandas-stubs>=2.3.2.250926",
	"pymupdf-stubs>=1.26.1.post1",
	"pytest>=8.3.5",
	"pytest-asyncio>=0.24.0",
	"pytest-cov>=6.1.1",
	"pytest-watcher>=0.6.3",
	"radon>=6.0.1",
	"ruff>=0.11.4",
	"ty>=0.0.5",
	"vulture>=2.16",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.fastapi]
entrypoint = "app.api:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "app"
addopts = ["--import-mode=importlib", "--cov=app", "--cov-fail-under=36"]

[tool.ruff]
line-length = 88
target-version = "py313"
lint.select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
lint.ignore = ["E101", "E203", "W191"]
exclude = ["notebooks", "cross_referencing_tests"]

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.basedpyright]
include = ["app"]
exclude = [
	"**/node_modules",
	"**/__pycache__",
	# TEMPORARY: Pre-existing code to type-check in Phase 1-2
	"app/data/database/local/demo_*.py", # Demo DB code - Phase 1
	"app/settings/settings_repo.py", # Settings repo - Phase 1
	"app/ocr", # OCR clients/handlers - Phase 2
	"app/routers/file_route.py", # File upload routes - Phase 2
	"app/matching/fuzzy_match_helper.py", # Fuzzy matching - Phase 2
	# PERMANENT: None currently
]
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
reportAny = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportExplicitAny = "none"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportUnreachable = "error"
reportOptionalMemberAccess = "error"
reportOptionalOperand = "error"
reportAssignmentType = "warning"
reportUnannotatedClassAttribute = "none"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "node_modules"]
skips = ["B101"]
