[project]
name = "ballot-petition-signature-verifier"
version = "1.0.0-alpha.8"
description = "A python package for verifying ballot petition signatures"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Mobolaji Williams" }]
maintainers = [
    { name = "Mobolaji Williams" },
    { name = "Andrew Shao" },
    { name = "Kurian Vithayathil" },
    { name = "Kevin Shu" },
    { name = "Eugene Kim" },
]
license = "MIT"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.14.0",
    "asgi-correlation-id>=4.3.4",
    "fastapi[standard]>=0.115.12",
    "h11>=0.16.0",
    "starlette>=0.49.1",
    "google-genai>=1.0.0",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.5",
    "loguru>=0.7.3",
    "mistralai>=1.0.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.0.0",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pillow>=11.1.0",
    "postgrest>=2.28.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.13.0",
    "pymupdf>=1.25.5",
    "python-multipart>=0.0.26",
    "rapidfuzz>=3.13.0,<4.0.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sqlmodel>=0.0.22",
    "structlog>=25.2.0",
    "supabase>=2.0.0",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
    "json5>=0.14.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.57.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.1.1",
    "basedpyright>=1.28.0",
    "pytest-benchmark>=5.1.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.4",
    "bandit>=1.9.0",
    "vulture>=2.16",
    "commitizen>=4.13.10",
    "approvaltests>=0.2.0",
    "pytest-approvaltests>=0.2.0",
    "pandas-stubs>=2.2.0",
    "types-requests>=2.32.0",
    "radon>=6.0.1",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["app", "tests"]
addopts = ["--import-mode=importlib"]
asyncio_mode = "auto"
markers = [
    "slow: tests that process large datasets (100K voters)",
]


[tool.ruff]
exclude = ["notebooks", "cross_referencing_tests"]
